Yet ANOTHER attempt to fix the light/dark mode bug

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -492,17 +492,6 @@ footer
     font-size: 1rem;
     width: 50%;
   }
-
-  .searchBar input,
-  .searchBar input:focus,
-  .searchBar input:hover,
-  .searchBar input:active,
-  .searchBar input:-webkit-autofill   
-  {
-    border-color: white !important;
-    background-color: black !important;
-    color: white !important;
-  }
   
   .dcLogo 
   {
@@ -544,3 +533,19 @@ footer
       color: white !important;
     }
 }
+
+  .searchBar input,
+  .searchBar input:focus,
+  .searchBar input:hover,
+  .searchBar input:active,
+  .searchBar input:-webkit-autofill   
+  {
+    border-color: white !important;
+    background-color: black !important;
+    color: white !important;
+  }
+
+  .mainTitle 
+  {
+    color: black !important;
+  }
